--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "nodejs-complete-guide",
+  "name": "Shenmo",
   "version": "1.0.0",
-  "description": "Complete Node.js Guide",
+  "description": "Shenmo Europe website",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "start-server": "node app.js"
   },
-  "author": "Maximilian Schwarzmüller",
+  "author": "Iury Bubnov Vasilevich",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^1.18.3"
-  },
+  "devDependencies": {},
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
@@ -24,7 +22,6 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "mongodb": "^3.1.6",
-    "mongoose": "^5.2.17",
     "mysql2": "^1.6.1",
     "pug": "^2.0.3",
     "sequelize": "^5.0.0-beta.11"
